added CSS to project

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -16,6 +16,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!--  The viewport defines the default view for our webpage.  -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--  The link to the CSS style sheet.  -->
+    <link rel="stylesheet" href="./assets/style.css">
     <!--  The title element defines the title of the document, which is required for HTML documents. This title appears on the tab of the web browser.  -->
     <title>Prework Study Guide</title>
   </head>
@@ -50,8 +52,9 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Fill.</li>
-          <li>Later.</li>
+          <li>CSS can be applied in three ways; inline CSS, internal CSS style sheet, and external CSS style sheet. Generally, the external method is considered best practice.</li>
+          <li>CSS can be applied by targeting HTML elements in general, multiple elements using the class selector, or a single element using the ID selector.</li>
+          <li>Margin indicates how much space is given to the outside of the element, while padding indicates how much space is given around the content inside an element.</li>
         </ul>
       </section>
       <section class="card" id="git-section">
