--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -32,6 +32,7 @@
       <!--  The img element contains information about images that are displayed on a webpage.  -->
       <!--  The src attribute is the most important img attribute because it defines the location of the image file.  -->
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
 
     <!--  The main element specifies the main content of a document. There must not be more than one main element in a document. -->
@@ -79,5 +80,6 @@
       <!--  The paragraph, or block of text, element.  -->
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
